2024-03-01T08:19:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8108477227 # 163
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-01
* notice: last 14d: unq all: 107 186
* notice: prev accum: outdated-unq outdated-all / unq all: 2831 6977 / 2966 7162
* notice: next accum: outdated-unq outdated-all / unq all: 2831 6977 / 2967 7163
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-03-01]

2024-02-29T16:18:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8099186067 # 161
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-29
* notice: last 14d: unq all: 107 185
* notice: prev accum: outdated-unq outdated-all / unq all: 2831 6977 / 2965 7160
* notice: next accum: outdated-unq outdated-all / unq all: 2831 6977 / 2966 7162
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2024-02-29]

2024-02-29T08:18:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8092982255 # 160
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-29
* notice: last 14d: unq all: 106 183
* notice: prev accum: outdated-unq outdated-all / unq all: 2831 6977 / 2964 7159
* notice: next accum: outdated-unq outdated-all / unq all: 2831 6977 / 2965 7160
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-02-29]

2024-02-29T01:06:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8089425845 # 159