@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-03-01T08:19:01Z",
+  "timestamp" : "2024-03-01T16:18:16Z",
   "count_outdated" : 6977,
   "uniques_outdated" : 2831,
-  "count" : 7163,
+  "count" : 7164,
   "uniques" : 2967,
   "clones" : [
     {
@@ -124,9 +124,9 @@
     },
     {
       "timestamp": "2024-03-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
